[package]
name = "ccrouter"
version = "0.1.7"
edition = "2021"
description = "Lightweight CLI proxy to route Claude Code to any LLM provider"
license = "MIT"

[[bin]]
name = "ccrouter"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
notify = "6"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
async-stream = "0.3"
